Fix footer position on mobile

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -174,11 +174,7 @@ body {
 }
 
 .footer {
-  bottom: 0;
-  left: 0;
   padding: 0.5em;
-  position: absolute;
-  right: 0;
 }
 
 .attribution {
@@ -250,6 +246,10 @@ body {
   }
 
   .footer {
+    bottom: 0;
+    left: 0;
+    padding: 0.5em;
+    position: fixed;
     right: 50%;
   }
 }
